# prepdir

./: INSTALL.md  MANIFEST.in  README.md  config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.prepdir/: config.yaml
docs/: CHANGELOG.md  prepdir_design_decisions_20250621.md  prepdir_design_decisions_20250628.md
scripts/: profile.py  profile_prepdir.py
src/prepdir/: __init__.py  config.py  config.yaml  core.py  glob_translate.py  is_excluded_file.py  is_excluded_path.py  main.py  prepdir_file_entry.py  prepdir_logging.py  prepdir_output_file.py  prepdir_processor.py  scrub_uuids.py  validate_output_file.py
tests/: conftest.py  test_config.py  test_core.py  test_glob_translate.py  test_is_excluded_file.py  test_is_excluded_path.py  test_main.py  test_prepdir_file_entry.py  test_prepdir_logging.py  test_prepdir_output_file.py  test_prepdir_processor.py  test_processor_output.py  test_scrub_uuids.py  test_validate_output_file.py
