[project]
name = "prepdir"
version = "0.4.1"
description = "Directory traversal utility to prepare project contents for review"
readme = "README.md"
authors = [
    {name = "eyecantell", email = "paul@pneuma.solutions"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
prepdir = "prepdir.main:main"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "src"
includes = ["src/prepdir", "config.yaml"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/eyecantell/prepdir"
Issues = "https://github.com/eyecantell/prepdir/issues"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]